--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,23 @@
   width:250px;
   box-shadow:0px 0px 10px rgb(3, 10, 43);
   padding:50px;
-  margin-top:150px;
+  margin-top:80px;
   border-radius:50%;
+  cursor: pointer;
+
+
+}
+input::placeholder{
+  color:black;
+}
+
+button{
+    cursor: pointer;
 
 }
 h1{
   text-decoration: underline;
+  margin-bottom:10px;
 }
 .c{
   width:95%;
@@ -24,7 +35,7 @@ h1{
   justify-content: center;
   align-items: center;
   text-align: center;
-  background:skyblue;
+background: radial-gradient(#43cea2, #185a9d);
   min-height:100vh;
 }
 input{
@@ -35,6 +46,8 @@ input{
   background:none;
   border-bottom:2px solid red;
    outline: none; 
+     cursor: pointer;
+
 }
 
 
@@ -52,13 +65,15 @@ button:hover{
 
 }
 .car{
-  border-left:20px solid rgb(228, 151, 151);
-  border-right:20px solid pink;
-  border-top:1px solid antiquewhite;
-  border-bottom:2px solid sandybrown;
+  border-left:20px solid  #43cea2;
+  border-right:20px solid #1a63a0;;
+  border-top:1px solid rgb(179, 142, 93);
+  border-bottom:1px solid sandybrown;
   
 
+
 }
+
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(20px); }
   to { opacity: 1; transform: translateY(0); }
