--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   color: white;
   padding: 15px 20px;
   flex-wrap: wrap;
+  cursor: pointer;
 }
 
 .nav h1 {
@@ -21,6 +22,7 @@
   color: white;
   cursor: pointer;
   transition: 0.3s;
+
 }
 @media(max-width:500px){
     .c1{
@@ -42,6 +44,8 @@
   gap: 20px;
   padding: 20px;
   background: #f5f5f5;
+    cursor: pointer;
+
 }
 
 /* Responsive Video Box */
@@ -53,10 +57,17 @@
   overflow: hidden;
   box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   transition: 0.3s;
+    cursor: pointer;
+
+}
+.video-box{
+    box-shadow:0px 0px 5px rgb(204, 82, 129);
+
 }
 
 .video-box:hover {
   transform: translateY(-5px);
+  box-shadow:0px 0px 10px red;
 }
 
 .video-box iframe {
