--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,14 @@
 .car{
   width:250px;
   box-shadow:0px 0px 10px rgb(3, 10, 43);
-  padding:50px;
+  padding:60px;
   margin-top:80px;
   border-radius:50%;
   cursor: pointer;
 
 
 }
+
 input::placeholder{
   color:black;
 }
@@ -64,6 +65,17 @@ button:hover{
   
 
 }
+small button{
+  width:100px;
+  height:20px;
+  color:white;
+  background:gray;
+}
+small button:hover{
+  background:orange;
+  color:black;
+
+}
 .car{
   border-left:20px solid  #43cea2;
   border-right:20px solid #1a63a0;;
@@ -87,13 +99,17 @@ button:hover{
 /* Mobile Optimization */
 @media (max-width: 480px) {
   .car {
-    padding: 30px 20px;
+    padding: 30px 35px;
     margin-top:50px;
   }
 
   h1 {
     font-size: 20px;
   }
+  small{
+  margin:10px;
+}
+
   .card{
   display:flex;
   justify-content: center;
